app/assets/stylesheets/base.scss
/* ... */
.followable-content {
  font-weight: bold;
}

.followable-text {
  display: inline-block;
  max-width: 75%;
}

.follow-switch {
  display: inline-block;
  float: right;
  font-size: rem-calc(48);
  line-height: $line-height * 2;
}

.fixed-mobile-content {
  top: 0 !important;

  &.is-stuck {
    top: auto !important;
  }
}

.proposal-dashboard .button {

  &.expanded {
    word-break: break-word;
  }
}

// 11. Polls
// --------------------

.poll,
.poll-question {
  border: 2px solid $border;
  border-radius: rem-calc(12);
  box-shadow: none;
  overflow: hidden;

  @include breakpoint(medium) {

    img {
      border-bottom-left-radius: rem-calc(12);
      border-top-left-radius: rem-calc(12);
      max-width: none;
    }
  }

  .question-list {
    font-size: $small-font-size;

    li {
      margin-bottom: $line-height;
    }
  }

  .message {
    position: absolute;
    left: 0;
    top: 12px;

    span {
      float: left;
      font-size: rem-calc(36);
      margin-right: $line-height / 2;
    }
  }

  .button {
    margin-bottom: $line-height;
  }

  .image-container {
    min-height: $line-height * 10;
  }
}

.section-title-divider {
  border-bottom: 4px solid $light;
  color: $brand;

  span {
    border-bottom: 0;
    display: inline-block;
    position: relative;

    &::after {
      border-bottom: 4px solid $brand;
      bottom: -4px;
      content: "";
      left: 0;
      position: absolute;
      width: 100%;
    }
  }
}

.poll-question {
  padding-top: $line-height;

  h3 {
    margin-bottom: 0;
    padding-top: 0;
  }
}

.poll-question-answers {

  span,
  a {
    width: 100%;
  }

  .button {

    &.hollow {

      &.secondary,
      &.secondary.disabled,
      &.secondary[disabled],
      &.secondary.disabled:hover,
      &.secondary[disabled]:hover,
      &.secondary.disabled:focus,
      &.secondary[disabled]:focus {
        border: 2px solid $text;
        color: $text;
        font-weight: bold;
      }
    }

    &.answered {
      background: $brand;
      border: 2px solid $brand;
      color: #fff;

      &::after {
        background: $brand;
        border: 2px solid #fff;
        color: #fff;
        right: -8px;
        top: -12px;
      }
    }
  }
}

.poll-more-info-answers-divider {
  border-top: 4px solid $border;
}

.poll-more-info-answers {

  .row {
    display: flex;
    flex-wrap: wrap;
  }

  .column:nth-child(odd),
  .columns:nth-child(odd) {
    border-right: 0;
  }
}

.poll-more-info .read-more button,
.poll-more-info-answers .read-more button {
  color: $white;

  &:hover {
    color: $white;
  }
}

.answer-question h2 {
  font-size: rem-calc(24);
}

.answer {

  a,
  img {
    outline: 0;
  }

  img {
    border: 2px solid $border;
  }

  .icon-search-plus::before,
  .icon-search-minus::before {
    position: absolute;
    right: 12px;
    top: 0;
  }

  .zoom-link,
  .orbit-caption,
  .orbit-controls {
    display: none;
  }
}

// 12. Users
// --------------------

.auth-page {

  .auth-title {
    margin: $line-height * 2 0;
    text-align: center;
  }

  .auth-form {

    @include breakpoint(medium) {
      margin-bottom: 0;
      padding-bottom: $line-height * 10;
    }

    a,
    p,
    a h2,
    .checkbox {
      font-size: $base-font-size;
    }

    .checkbox {
      font-weight: bold;
    }

    h2 {
      font-size: rem-calc(48);
    }

    img {
      padding-top: rem-calc(100);
    }
  }

  .auth-image {
    background-color: transparent;
    background-size: auto;

    @include breakpoint(medium) {
      min-height: rem-calc(1390);
    }
  }

  .submenu h2 {
    margin: 0;
    margin-bottom: $line-height / 2;
  }
}

.verification button {
  min-height: 0;
}

.subscriptions-edit {

  form {
    max-width: none;
  }

  h2 {
    margin-bottom: $line-height;
  }
}

// 13. Custom
// ------------------------------

.budget-investment-new {

  .header {
    background: $brand-secondary;
    border-bottom-right-radius: rem-calc(12);
    border-top-right-radius: rem-calc(12);
    color: #fff;
    margin-top: $line-height * 2;
    padding: $line-height * 2 0;
    position: relative;

    h1 {
      font-size: rem-calc(36);

      @include breakpoint(large) {
        font-size: rem-calc(44);
      }
    }

    &::before {
      background: $brand-secondary;
      border: 4px solid $brand-secondary;
      content: "";
      height: 100%;
      position: absolute;
      top: 0;
      right: 100%;
      width: 100%;
      z-index: 1;
    }

    &::after {
      background: #fff;
      border: 4px solid $brand-secondary;
      border-bottom-right-radius: rem-calc(12);
      border-top-right-radius: rem-calc(12);
      clip-path: polygon(20% 0, 100% 1%, 100% 100%, 20% 100%, 5% 50%);
      color: $brand-secondary;
      content: "\f1ad";
      display: none;
      font-family: "Font Awesome 5 Free";
      font-size: rem-calc(100);
      height: 100%;
      padding-left: $line-height;
      padding-top: $line-height;
      position: absolute;
      text-align: center;
      top: 0;
      right: 0;
      width: rem-calc(160);

      @include breakpoint(medium) {
        display: block;
      }

      @include breakpoint(large) {
        padding-top: 0;
        width: rem-calc(200);
      }
    }

    .header-icon {
      display: block;
      font-size: rem-calc(36);
      line-height: rem-calc(60);

      @include breakpoint(large) {
        font-size: rem-calc(80);
        padding-right: rem-calc(240);
        position: absolute;
        right: 0;
      }
    }

    &.header-single-heading {

      .header-icon {

        @include breakpoint(large) {
          top: 80px;
        }
      }

      &::after {
        padding-top: $line-height;
      }
    }
  }
}
/* ... */

